Added product tests and logic + uodated swagger.json
